# http-signature-examples

./: .gitignore  README.md
Csharp/: .gitignore  Program.cs  README.md  httpsig-example.csproj
Csharp/httpsig-example/: httpsig-example.csproj
Go/: go.mod
Java/: README.md
Java/simple-signing-demo/: .gitignore  LICENSE  README.md  build.gradle  dot.env.template  env.properties.tmpl
Java/simple-signing-demo/codeformat/: HEADER
Java/simple-signing-demo/src/main/java/co/upvest/client/: KeyUtility.java  SignatureComponents.java  SignatureComponentsAuth.java  SignatureComponentsGet.java  SignatureComponentsPost.java  SignatureGet.java  SignatureKey.java  SignaturePost.java  SigningKey.java  SigningUtil.java  SigningUtility.java
Java/simple-signing-demo/src/test/java/co/upvest/client/: ConfigReader.java  GetUsersTest.java  UpvestClientTest.java
Java/simple-signing-demo/src/test/resources/: simplelogger.properties
Javascript/: .env.example  .gitignore  Canonicaliser.mjs  Dockerfile  Makefile  NodeKeyLoader.mjs  README.md  Signature.mjs  UpvestNodeAxiosInterceptor.mjs  UpvestNodeSigner.mjs  example.mjs  index.mjs  package.json  run.sh  settings.mjs  util.mjs
Python/: .env.example  .gitignore  Dockerfile  Makefile  README.md  download_mifir_report.py  main.py  requirements.txt  run.sh  run_download.sh  settings.py  sign.py  upvest_http_message_signatures.py
Python/pkg/: publish.sh  requirements.txt
Python/pkg/upvest_investment_api/: .gitignore  LICENSE  README.md  pyproject.toml
Python/pkg/upvest_investment_api/src/upvest_investment_api/: __init__.py  env_settings.py  file_download.py  http_message_signatures.py  requests_auth.py
Python/pkg/upvest_investment_api/tests/: .gitignore
Python/upvest/: auth.py  http.py
